change name of the project

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://ahmedhosssam.github.io/shopping-cart/",
-  "name": "shopping-cart",
+  "name": "football-nft-store",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
