fix homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ahmedhosssam.github.io/shopping-cart/",
+  "homepage": "https://ahmedhosssam.github.io/football-nft-store",
   "name": "football-nft-store",
   "version": "0.1.0",
   "private": true,
